--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- HEADER -->
     <header>
         <nav>
-            <a href=""><span>Web</span>Studio</a>
+            <a href="./index.html">WebStudio</a>
             <ul>
                 <li><a href="">Studio</a></li>
                 <li><a href="">Portfolio</a></li>
@@ -92,7 +92,7 @@
 
     <!-- FOOTER -->
     <footer>
-        <a href=""><span>Web</span>Studio</a>
+        <a href="./index.html">WebStudio</a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
